[flake8]
exclude = onesecmail/__init__.py

[metadata]
name = onesecmail
version = attr: onesecmail.__version__.__version__
url = https://github.com/yyyyyyyan/onesecmail
download_url = https://github.com/yyyyyyyan/onesecmail/archive/refs/heads/main.zip
author = yyyyyyyan
author_email = contact@yyyyyyyan.tech
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Communications :: Email
    Topic :: Software Development :: Libraries
license = MIT
license_files = LICENSE
description = The unofficial Python client for the 1secmail API.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    email
    1secmail

[options]
packages = onesecmail
install_requires =
    requests>=2.25.1
